<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mascharka.indoorlocalization.MainActivity$PlaceholderFragment" >
    
    <com.mascharka.indoorlocalization.GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    
	<TextView 
	    android:id="@+id/text_xposition"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/text_xposition"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:freezesText="true" />
	    	
	<TextView
	    android:id="@+id/text_yposition"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/text_yposition"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:freezesText="true" />
	
	<Button
	    android:id="@+id/button_confirm"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/button_confirm"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentRight="true"
	    android:onClick="saveReading" />

	<TextView
	    android:id="@+id/text_building"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_alignParentLeft="true"
	    android:freezesText="true" />
	
	<TextView
	    android:id="@+id/text_room_size"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_alignParentRight="true"
	    android:freezesText="true" />
	
</RelativeLayout>